# video_server_py

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: config.py  main.py
app/models/: __init__.py  episode.py  quote.py  utils.py
app/routers/: __init__.py  quote.py  video.py
app/services/: __init__.py  db_service.py  video_service.py
tests/: conftest.py  test_config.py  test_models.py  test_routers.py  test_video_service.py  test_video_utils.py
